<resources>
    <string name="app_name">Chat app</string>

    <string name="general_login">Login</string>
    <string name="general_login_underlined"><u>Login</u></string>
    <string name="general_logout">Log out</string>
    <string name="general_sign_up">Sign up</string>
    <string name="general_sign_up_underlined"><u>Sign up</u></string>
    <string name="general_terms_of_service">By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie Use. Others will be able to find you by searching for your email address or phone number when provided.</string>
    <string name="general_send">send</string>
    <string name="general_you">You</string>

    <string name="hint_user_name">User name</string>
    <string name="hint_password">password</string>
    <string name="hint_new_message">Start a new message</string>

    <string name="error_value_incorrect">Value is incorrect</string>
</resources>
