<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingEnd="@dimen/margin_vertical"
        android:paddingStart="@dimen/margin_vertical">

        <EditText
            android:id="@+id/et_user_name"
            style="@style/RoundedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:hint="@string/hint_user_name"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/tv_error_user_name"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal2"
            android:text="@string/error_value_incorrect"
            android:textColor="@color/color_error"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_password"
            style="@style/RoundedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal3"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_error_password"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal2"
            android:text="@string/error_value_incorrect"
            android:textColor="@color/color_error"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/GreenRoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal3"
            android:text="@string/general_sign_up" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_horizontal2"
            android:text="@string/general_login_underlined"
            android:textColor="@color/color_text_light"
            android:textSize="@dimen/text_size_subtitle" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:text="@string/general_terms_of_service"
            android:textColor="@color/color_text_light"
            android:textSize="@dimen/text_size_subtitle" />

    </LinearLayout>

</RelativeLayout>